Save mapping and speed up inference

--- a/notebook/densepose_transform.ipynb
+++ b/notebook/densepose_transform.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x127467be0>"
+       "<matplotlib.image.AxesImage at 0x11c141dd8>"
       ]
      },
      "execution_count": 2,
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "normal_tex = np.array(im)\n",
-    "converter = Normal2Atlas()\n",
-    "atlas_texture, atlas_ex = converter.mapping(normal_tex, size=200)"
+    "converter = Normal2Atlas(normal_size=512, atlas_size=200)\n",
+    "atlas_texture, atlas_ex = converter.mapping(normal_tex)"
    ]
   },
   {
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x127ee7cf8>"
+       "<matplotlib.image.AxesImage at 0x125844eb8>"
       ]
      },
      "execution_count": 4,
@@ -125,17 +125,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13776/13776 [08:11<00:00, 28.04it/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "atlas_texture = converter.convert(normal_tex, size=200)"
+    "atlas_texture = converter.convert(normal_tex)"
    ]
   },
   {
@@ -146,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x127f05b00>"
+       "<matplotlib.image.AxesImage at 0x122ea2cf8>"
       ]
      },
      "execution_count": 6,
@@ -202,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x129cc3668>"
+       "<matplotlib.image.AxesImage at 0x125951940>"
       ]
      },
      "execution_count": 8,
@@ -265,8 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter = Atlas2Normal()\n",
-    "normal_tex, normal_ex = converter.mapping(atlas_tex, size=512)"
+    "converter = Atlas2Normal(atlas_size=200, normal_size=512)\n",
+    "normal_tex, normal_ex = converter.mapping(atlas_tex)"
    ]
   },
   {
@@ -277,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x133f59748>"
+       "<matplotlib.image.AxesImage at 0x133a16978>"
       ]
      },
      "execution_count": 11,
@@ -312,17 +304,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13774/13774 [01:33<00:00, 159.10it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "normal_tex = converter.convert(atlas_tex, size=512)"
+    "normal_tex = converter.convert(atlas_tex)"
    ]
   },
   {
@@ -333,7 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1276c6f60>"
+       "<matplotlib.image.AxesImage at 0x13276fb00>"
       ]
      },
      "execution_count": 13,
