Update notebooks for using new function

--- a/notebook/convert_texture_between_normal_and_altas.ipynb
+++ b/notebook/convert_texture_between_normal_and_altas.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Normal texture to Atlas texture"
+    "# Convert texture between normal and atlas\n",
+    "\n",
+    "- [1. Normal texture to Atlas texture](#1.-Normal-texture-to-Atlas-texture)\n",
+    "    - [1.1. display normal texture](#1.1.-display-normal-texture)\n",
+    "    - [1.2. convert](#1.2.-convert)\n",
+    "- [2. Atlas texture to Normal texture](#2.-Atlas-texture-to-Normal-texture)\n",
+    "    - [2.1. display atlas texture](#2.1.-display-atlas-texture)\n",
+    "    - [2.2. convert](#2.2.-convert)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Normal texture to Atlas texture"
    ]
   },
   {
@@ -36,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f65641ee9b0>"
+       "<matplotlib.image.AxesImage at 0x7fe705c12ba8>"
       ]
      },
      "execution_count": 2,
@@ -78,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6557bf8208>"
+       "<matplotlib.image.AxesImage at 0x7fe6f95f9390>"
       ]
      },
      "execution_count": 3,
@@ -101,6 +115,8 @@
    "source": [
     "converter = Normal2Atlas(normal_size=512, atlas_size=200)\n",
     "atlas_texture = converter.convert(normal_tex)\n",
+    "\n",
+    "# for display\n",
     "plt.imshow(Normal2Atlas.concat_atlas_tex(atlas_texture))"
    ]
   },
@@ -135,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6557ba63c8>"
+       "<matplotlib.image.AxesImage at 0x7fe6f95a63c8>"
       ]
      },
      "execution_count": 5,
@@ -174,36 +190,10 @@
     {
      "data": {
       "text/plain": [
-       "(24, 200, 200, 3)"
+       "<matplotlib.image.AxesImage at 0x7fe6f03b34a8>"
       ]
      },
      "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size = 200\n",
-    "atlas_tex  = np.zeros([24,size,size,3])\n",
-    "for i in range(4):\n",
-    "    for j in range(6):\n",
-    "        atlas_tex[(6*i+j) , :,:,:] = im[(size*i):(size*i+size),(size*j):(size*j+size),: ]\n",
-    "        \n",
-    "atlas_tex.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f654ea826d8>"
-      ]
-     },
-     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -221,8 +211,11 @@
     }
    ],
    "source": [
+    "# for stack\n",
+    "atlas_tex_stack = Atlas2Normal.split_atlas_tex(im)\n",
+    "\n",
     "converter = Atlas2Normal(atlas_size=200, normal_size=512)\n",
-    "normal_tex = converter.convert(atlas_tex)\n",
+    "normal_tex = converter.convert(atlas_tex_stack)\n",
     "plt.imshow(normal_tex)"
    ]
   },
