--- a/notebook/create_uv_texture_from_image_by_using_densepose.ipynb
+++ b/notebook/create_uv_texture_from_image_by_using_densepose.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# densepose convert demo"
+    "# Create UV texture from image by using densepose\n",
+    "\n",
+    "- [1. create texture by densepose in atlas style](#1.-create-texture-by-densepose-in-atlas-style)\n",
+    "- [2. convert from atlas to normal](#2.-convert-from-atlas-to-normal)\n",
+    "- [3. convert from normal to atlas](#3.-convert-from-normal-to-atlas)"
    ]
   },
   {
@@ -13,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from UVTextureConverter import UVConverter\n",
     "from UVTextureConverter import Normal2Atlas\n",
     "from UVTextureConverter import Atlas2Normal\n",
     "from PIL import Image\n",
@@ -29,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf9617978>"
+       "<matplotlib.image.AxesImage at 0x7f434440db70>"
       ]
      },
      "execution_count": 2,
@@ -62,7 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf8bb0978>"
+       "<matplotlib.image.AxesImage at 0x7f43439a7c50>"
       ]
      },
      "execution_count": 3,
@@ -91,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## get texture by densepose in atlas style"
+    "## 1. create texture by densepose in atlas style"
    ]
   },
   {
@@ -100,50 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_center(pil_img, crop_width, crop_height):\n",
-    "    img_width, img_height = pil_img.size\n",
-    "    return pil_img.crop(((img_width - crop_width) // 2,\n",
-    "                         (img_height - crop_height) // 2,\n",
-    "                         (img_width + crop_width) // 2,\n",
-    "                         (img_height + crop_height) // 2))\n",
-    "\n",
-    "def create_smpl_from_images(im, iuv, img_size=200, entire=True, parts_type=0, resize=None):  \n",
-    "    I_id, U_id, V_id = 2, 1, 0\n",
-    "    if entire:\n",
-    "        parts_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24] # 22\n",
-    "        parts_num = 24\n",
-    "    else:\n",
-    "        if parts_type==0:\n",
-    "            parts_list = [1, 2, 15, 16, 17, 18, 19, 20, 21, 22] # 10\n",
-    "            parts_num = 10\n",
-    "        elif parts_type==1:\n",
-    "            parts_list = [1, 2, 3, 4, 15, 16, 17, 18, 19, 20, 21, 22] # 12\n",
-    "            parts_num = 12\n",
-    "\n",
-    "    ### generate parts ###\n",
-    "    im = Image.open(im)\n",
-    "    iuv = Image.open(iuv)\n",
-    "    \n",
-    "    if not resize is None:\n",
-    "        im = crop_center(im.resize((192, int(192*1100/762))), 192, 256)\n",
-    "        iuv = crop_center(iuv.resize((192, int(192*1100/762))), 192, 256)\n",
-    "\n",
-    "    im = (np.array(im) / 255).transpose(2,1,0)\n",
-    "    iuv = (np.array(iuv)).transpose(2,1,0)\n",
-    "\n",
-    "    texture = np.zeros((parts_num, 3, img_size, img_size))\n",
-    "    mask = np.zeros((parts_num, img_size, img_size))\n",
-    "    for j, parts_id in enumerate(parts_list):\n",
-    "        im_gen = np.zeros((3, img_size, img_size))\n",
-    "        im_gen[0][(iuv[V_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int), (iuv[U_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int)] = im[0][iuv[I_id] == parts_id]\n",
-    "        im_gen[1][(iuv[V_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int), (iuv[U_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int)] = im[1][iuv[I_id] == parts_id]\n",
-    "        im_gen[2][(iuv[V_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int), (iuv[U_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int)] = im[2][iuv[I_id] == parts_id]\n",
-    "        texture[j] = im_gen[:,::-1, :]\n",
-    "\n",
-    "        mask[j][(iuv[V_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int), (iuv[U_id][iuv[I_id] == parts_id] / 255 * (img_size-1)).astype(int)] =  1\n",
-    "        mask[j] = mask[j][::-1, :]\n",
-    "\n",
-    "    return texture, mask"
+    "parts_size = 200"
    ]
   },
   {
@@ -152,35 +114,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parts_size = 200\n",
-    "tex, mask = create_smpl_from_images(\"../input/human.jpg\", \"../input/human_IUV.jpg\", img_size=parts_size)"
+    "# tex_trans: (24, 200, 200, 3), mask_trans: (24, 200, 200)\n",
+    "tex_trans, mask_trans = UVConverter.create_texture(\"../input/human.jpg\", \"../input/human_IUV.jpg\", parts_size=parts_size, concat=False)\n",
+    "\n",
+    "# for display\n",
+    "tex = UVConverter.concat_atlas_tex(tex_trans)  # 800 x 1200 x 3\n",
+    "mask = UVConverter.concat_atlas_tex(mask_trans)  # 800 x 1200"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "tex_trans = np.zeros((24, parts_size, parts_size, 3))\n",
-    "mask_trans = np.zeros((24, parts_size, parts_size))\n",
-    "for i in range(tex.shape[0]):\n",
-    "    tex_trans[i] = tex[i].transpose(2, 1, 0)\n",
-    "    mask_trans[i] = mask[i].transpose(1, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf8b29ef0>"
+       "<matplotlib.image.AxesImage at 0x7f434390bc88>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -198,21 +151,21 @@
     }
    ],
    "source": [
-    "plt.imshow(Normal2Atlas.concat_atlas_tex(tex_trans))"
+    "plt.imshow(tex)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf8a94828>"
+       "<matplotlib.image.AxesImage at 0x7f43438f5d68>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,19 +183,19 @@
     }
    ],
    "source": [
-    "plt.imshow(Normal2Atlas.concat_atlas_tex(mask_trans))"
+    "plt.imshow(mask)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## convert from atlas to normal"
+    "## 2. convert from atlas to normal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf1783358>"
+       "<matplotlib.image.AxesImage at 0x7f4340dcaeb8>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf3c374e0>"
+       "<matplotlib.image.AxesImage at 0x7f4341dab208>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,12 +271,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## reverse demo (convert from normal to atlas)"
+    "## 3. convert from normal to atlas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf0bcfb70>"
+       "<matplotlib.image.AxesImage at 0x7f433ec2e7f0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,21 +313,21 @@
     }
    ],
    "source": [
-    "plt.imshow(Normal2Atlas.concat_atlas_tex(atlas_tex))"
+    "plt.imshow(UVConverter.concat_atlas_tex(atlas_tex))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cf0dd59b0>"
+       "<matplotlib.image.AxesImage at 0x7f433ef2c668>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -392,7 +345,7 @@
     }
    ],
    "source": [
-    "plt.imshow(Normal2Atlas.concat_atlas_tex(atlas_ex))"
+    "plt.imshow(UVConverter.concat_atlas_tex(atlas_ex))"
    ]
   },
   {
